Fix restricted method warnings